# competitive_programming

./: .gitignore  CMakeLists.txt
groups/auca_competitive_programming_fall_2024/beginners_complexity/: polycarp_and_coins.cpp
groups/auca_competitive_programming_fall_2024/experienced/: burning_midnight_oil.cpp
problemset/rating_800/: polycarp_and_coins.cpp
