cmake_minimum_required(VERSION 3.26)
project(algorithm_languages_I)

set(CMAKE_CXX_STANDARD 17)
add_executable(algorithm_languages_I
        beginners_complexity/average_numbers.cpp
        #        beginners_complexity/arithmetic_mean.cpp
        #        beginners_complexity/arithmetic_mean.cpp
)
